--- a/02-course-details.html
+++ b/02-course-details.html
@@ -229,7 +229,11 @@
 			if  (cVal == 5){
 			$('#capacity').parent().removeClass('hidden');
 			$('#rpatypeair').parent().removeClass('hidden');
-			$('#weight').parent().addClass('hidden');	
+			$('#weight').parent().addClass('hidden');
+			$('#rpatypeaero').parent().addClass('hidden');
+			$('#rpatypeheli').parent().addClass('hidden');
+			$('#rpatypemulti').parent().addClass('hidden');
+			$('#rpatypepow').parent().addClass('hidden');	
 			}
 	});
 	
