--- a/footer.html
+++ b/footer.html
@@ -29,19 +29,21 @@
 
 
 </head>
-
+	<div class="row">
+	<strong><font color="#FFF800">Wireframe Version 1</font></strong><br>
+	</div>
 <body style="margin:0;padding:0;">
 <div class="footer-wrapper" style="background:#4C4C4C;margin-top:5px;border:none !important;">
   <footer id="footer" class="clearfix">
     <div id="footer-col1" class="footer-column">
         <div class="region region-footer-col1">
-
 <div id="block-bean-footer-heading-resources" class="block block-bean contextual-links-region first odd">
 
-
   <div class="block__content">
+	  	 
     <h2 class="entity entity-bean bean-footer-heading-link default">
-  <a href="/landing-page/publications-and-resources">Resources</a>
+
+		<a href="/landing-page/publications-and-resources">Resources</a>
 </h2>  </div>
 
 </div>
@@ -140,7 +142,7 @@
 <div class="block__content"><span><br /><a href="https://www.facebook.com/CivilAviationSafetyAuthority"><img src="/sites/g/files/net351/themes/site/casa_2015/images/svg/icon_social_facebook.svg" alt="Facebook" title="Facebook" /></a><a href="https://twitter.com/CASABriefing"><img src="/sites/g/files/net351/themes/site/casa_2015/images/svg/icon_social_twitter.svg" alt="Twitter" title="Twitter" /></a><a href="https://www.linkedin.com/company/civil-aviation-safety-authority-casa-/"><img src="/sites/g/files/net351/themes/site/casa_2015/images/svg/icon_social_linkedin.svg" alt="LinkedIn" title="LinkedIn" /></a><a href="http://www.youtube.com/user/casabriefing"><img src="/sites/g/files/net351/themes/site/casa_2015/images/svg/icon_social_youtube.svg" alt="Youtube" title="Youtube" /></a><a href="/rss.xml"><img src="/sites/g/files/net351/themes/site/casa_2015/images/svg/icon_social_rss.svg" alt="RSS Feed" title="RSS Feed" /></a>  </span></div>
 </div>
   </div>
-
+	
 </div>
   </div>
       <div class="responsive-switch">
